--- a/css/styles.css
+++ b/css/styles.css
@@ -7,14 +7,21 @@
 body {    
 }
 
-.container {
-    margin-top: 100px;
+#header {
+    margin-top: 80px;
     text-align: center;        
-    
+    padding: 0px;
 }
 
-.container h1 {
-    margin-bottom: 50px;
+#header h1 {
+    padding: 20px 0px;
+    background-color: rgb(51, 51, 51);
+    margin-bottom: 80px;
+    color: white;
+}
+
+#header h1 b {
+    color: wheat;
 }
 
 #main-menu {
@@ -88,6 +95,7 @@ border: 1px solid rgb(51, 51, 51);
     margin-top: 80px;
     padding: 2px 0px;
     height: 35px;
+    height: 50px;
 }
 
 .menu-block.scaled .title {
@@ -98,12 +106,27 @@ border: 1px solid rgb(51, 51, 51);
 }
 
 .menu-block .title h4 {
-    margin-left: 150px;
-    color: white;
+    margin-bottom: 2px;
+    margin-left: 150px;    
+    color: wheat;
     font-size: 9px;
     font-weight: 100;
     height: 9px;
     overflow: hidden;
+}
+
+.menu-block .title p {
+    margin-right: 150px;
+    color: white;
+    font-size: 9px;
+    font-weight: 100;
+    overflow: hidden;
+}
+
+.menu-block.scaled .title p {
+    margin-right: 0px;
+    transition: all ease-in 0.2s;
+    transition-delay: 0.6s;    
 }
 
 .menu-block.scaled .title h4 {
