--- a/app/webroot/css/custom.css
+++ b/app/webroot/css/custom.css
@@ -7,7 +7,11 @@
 }
 
 .black-header .header-wrapper {
-    /*background: #000000;*/
+    background: #000000;
+}
+
+.black-header.affix-top .header-wrapper {
+    background: transparent;
 }
 
 .footer2-black {
@@ -18,36 +22,39 @@
     background-color: #000;
 }
 
-
-#main-menu .navbar .nav > li.li-menu-flag img {
-    width: 28px;
-    opacity: 0.2;
+.black-header #main-menu .navbar .nav > li.li-menu-flag a span {
+    color: rgba(255, 255, 255, 0.7);
 }
 
-#main-menu .navbar .nav > li.li-menu-flag img.flag-active {
+.black-header #main-menu .navbar .nav > li.li-menu-flag a span {
+    font-weight: 100;
+    display: block;
+    opacity: 0.5;
+    float: left;
+    margin-right: 5px;
+    opacity: 0.5;
+}
+
+.black-header #main-menu .navbar .nav > li.li-menu-flag a span.span-lang:hover {
     opacity: 1;
 }
 
-.black-header #main-menu .navbar .nav > li.li-menu-flag img {
-    opacity: 0.3;
-}
-
-.black-header #main-menu .navbar .nav > li.li-menu-flag .flag-active {
+#main-menu .navbar .nav > li.li-menu-flag a span.flag-active {
     opacity: 0.8;
+    font-weight: bold;
 }
 
-#main-menu .navbar .nav > li.li-menu-flag img {
-    border: 1px solid #333;
-}
-
-.affix #main-menu .navbar .nav > li.li-menu-flag img, .affix-top #main-menu .navbar .nav > li.li-menu-flag img {
-    border: 1px solid #333;
-}
-
-.affix.black-header #main-menu .navbar .nav > li.li-menu-flag img, .affix-top.black-header #main-menu .navbar .nav > li.li-menu-flag img {
+#main-menu .navbar .nav > li.li-menu-flag span {
     border: 0px solid #333;
 }
 
+.affix #main-menu .navbar .nav > li.li-menu-flag span, .affix-top #main-menu .navbar .nav > li.li-menu-flag span {
+    border: 0px solid #333;
+}
+
+.affix.black-header #main-menu .navbar .nav > li.li-menu-flag span, .affix-top.black-header #main-menu .navbar .nav > li.li-menu-flag span {
+    border: 0px solid #333;
+}
 
 .logo-footer {
     max-width: 90px;
@@ -106,4 +113,47 @@ ul#footer-images li a, ul#footer-images li a img {
 
 .tp-caption.dark-black-45, .tp-caption.dark-black-34 {
     font-weight: 900;
+}
+
+.why-us-section {
+    background-color: #EEEEEE;
+}
+
+.why-us-section h1 {
+    margin-top: 20px;
+    margin-bottom: 60px;
+}
+
+.why-us-section h1 span {        
+    margin-right: 20px;
+}
+
+.why-us-section h3 {    
+    text-transform: uppercase;
+}
+
+.why-us-section h3 span {
+    margin-right: 10px;
+}
+
+.why-us-section .fa {
+  
+}
+
+.why-us-section h3 {
+    display: block;
+    float: left;
+    margin-right: 10px;
+}
+
+.why-us-section a.button {
+    display: block;
+    float: left;
+    padding: 5px 10px;
+    margin: 10px 0px;
+}
+
+.why-us-section a:hover {
+    display: block;
+    opacity: 0.7;
 }
