code-essence - services

--- a/app/webroot/css/custom.css
+++ b/app/webroot/css/custom.css
@@ -120,7 +120,7 @@ ul#footer-images li a, ul#footer-images li a img {
 }
 
 .why-us-section h1 {
-    margin-top: 20px;
+    margin-top: 0px;
     margin-bottom: 60px;
 }
 
@@ -142,8 +142,10 @@ ul#footer-images li a, ul#footer-images li a img {
 
 .why-us-section h3 {
     display: block;
+    /*
     float: left;
     margin-right: 10px;
+    */
 }
 
 .why-us-section a.button {
@@ -156,4 +158,76 @@ ul#footer-images li a, ul#footer-images li a img {
 .why-us-section a:hover {
     display: block;
     opacity: 0.7;
+}
+
+.touch-contact-bg {
+    background: url(/images/pages/mail-me.jpg) fixed #000;
+}
+
+.touch-contact-text-cont a {
+    display: inline-block;
+    padding: 20px;
+    font-size: 40px;
+    line-height: 63px;
+    color: #fff;
+    vertical-align: middle;
+}
+
+.touch-contact-text-cont {
+    margin: 0 auto;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    text-align: center;
+    font-family: Lato,Arial,Helvetica,sans-serif;
+    font-size: 36px;
+    line-height: 36px;
+    font-weight: 100;
+    color: #f1f1f1;
+}
+
+#ce-home-extend-offer-container {
+    position: relative;
+    width: 100%;
+}
+
+#ce-home-extend-offer-fixed {
+    top: 0px;
+    top: 120px;
+    position: fixed !important;
+    background-color: rgba(255,255,255, 1);
+}
+
+.ce-home-extend-offer {
+   display: none;
+}
+
+.ce-home-extend-offer h3 {
+   margin-top: 0px;
+}
+
+#page-section-services .fes2-main-text-cont {
+    padding-left: 0px;
+    padding-right: 0px;
+    text-align: justify;
+}
+
+#page-section-services .ce-service-img {
+    
+    background-size: cover;
+}
+
+#page-section-services .fes3-img {
+    background: url(/images/pages/services/ecommerce-cart.jpg) 50% 50% no-repeat;
+}
+
+#page-section-services .fes4-img {
+    background: url(/images/pages/services/cms.jpg) 50% 50% no-repeat;
+}
+
+#page-section-services .fes5-img {
+    background: url(/images/pages/services/hosting.jpg) 50% 50% no-repeat;
+}
+
+#page-section-services .fes6-img {
+    background: url(/images/pages/services/integrations.jpg) 50% 50% no-repeat;
 }
